Small fix for letter spacing.

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -236,7 +236,7 @@ ul.navlist {
     padding-bottom: 20px;
     font-size: 14px;
     font-weight: 100;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     line-height: 22px;
     color: #FFF;
   }
